Add GroundDisconnection component and detect it at graph refinement
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>